--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
-  <html>
-  
-  <body>
-  <h1> Seerat </h1>
-  </body>
-  </html>
+<div class="MCWHeader1">
+Steps to be performed before the HOL step-by-step guide
+</div>
+
+Pre-requisite Lab guide: <https://github.com/Microsoft/MCW-Cosmos-DB-Real-Time-Advanced-Analytics/blob/master/Hands-on%20lab/Before%20the%20HOL%20-%20Cosmos%20DB%20real-time%20advanced%20analytics.md#before-the-hands-on-lab>
+
+###Task 10: Set up Azure Key Vault
+
+Key-Vault is pre-created, please follow the steps 4 and 5.﻿﻿
+
+###Task 11: Configure Cosmos DB
+
+You'll need to follow all the steps for this task.
+
+###Task 12: Configure Azure Databricks Key Vault-backed secrets
+
+You'll need to follow all the steps for this task.
+
+###Task 13: Provision Event Hubs
+
+Event hub is pre-created, please follow steps 4 to 16.﻿
+
+###Task 14: Create an Azure Data Lake Storage Gen2 account
+
+Storage account is pre-created, but you need to add secret in key vault. Follow steps from 6 to 12.
+
+##Hands-On-lab: Exercise 2:
+
+###Task 1: User is asked to create SPN (Service Plan Name) but we are providing a pre-created SPN . So the user need to use the same SPN given to them, they need not to create a new one.
